fix(playbooks/consul/02-install-prerequisites): comment out envoy install

--- a/contrib/playbooks/consul/roles/02-install-prerequisites/tasks/main.yml
+++ b/contrib/playbooks/consul/roles/02-install-prerequisites/tasks/main.yml
@@ -18,5 +18,5 @@
       - { name: iptables}
       - { name: software-properties-common}
       - { name: ufw}
-  - import_tasks: "02-envoy.yml"
+  # - import_tasks: "02-envoy.yml"
   become: yes
